--- a/portal/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/portal/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <div class="text-center">
     <h1 class="display-3">Dashboard</h1>
-    <p class="lead">This is the sample dashboard, you can find all books in book tab.</p>
+    <p class="lead">This is the sample dashboard.</p>
   </div>
   <hr class="my-4">
   <div class="card">
