--- a/portal/src/app/admin/admin.component.html
+++ b/portal/src/app/admin/admin.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container">
-    <a class="navbar-brand" routerLink="/">Angular-Laravel</a>
+    <a class="navbar-brand berkshire" routerLink="/">Access Portal</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -8,11 +8,11 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link btn btn-outline-secondary" routerLink="./" routerLinkActive="active"
+          <a class="nav-link" routerLink="./" routerLinkActive="active"
              [routerLinkActiveOptions]="{ exact: true }">Dashboard</a>
         </li>
         <li class="nav-item">
-          <button class="btn btn-outline-danger" (click)="logout()" *ngIf="authService.isLoggedIn">Logout</button>
+          <a class="nav-link logout" (click)="logout()" *ngIf="authService.isLoggedIn">Logout</a>
         </li>
       </ul>
     </div>
