--- a/portal/src/app/app.component.html
+++ b/portal/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="main">
+<div class="lobster-two">
   <h3>
     Welcome to {{title}}!
   </h3>
