--- a/portal/src/assets/css/master.css
+++ b/portal/src/assets/css/master.css
@@ -1,6 +1,11 @@
-.main {
-  font: 400 50px/1.3 'Lobster Two', Helvetica, sans-serif;
-  color: #2b2b2b;
-  text-shadow: 1px 1px 0px #ededed, 4px 4px 0px rgba(0,0,0,0.15);
-  text-align:center;
+.lobster-two {
+    font: 400 50px/1.3 'Lobster Two', Helvetica, sans-serif;
+    color: #2b2b2b;
+    text-shadow: 1px 1px 0px #ededed, 4px 4px 0px rgba(0,0,0,0.15);
+    text-align:center;
+}
+.berkshire{
+    font: 400 100px/1.3 'Berkshire Swash', Helvetica, sans-serif;
+    color: #2b2b2b;
+    text-shadow: 1px 1px 0px #ededed, 4px 4px 0px rgba(0,0,0,0.15);
 }
