--- a/portal/src/app/app.component.html
+++ b/portal/src/app/app.component.html
@@ -1,9 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="lobster-two">
-  <h3>
-    Welcome to {{title}}!
-  </h3>
-  <!-- Router Outlet -->
-</div>
 
  <router-outlet></router-outlet>
+ <div id="scrollTop">
+   <div class="d-flex align-items-center justify-content-end"><i class="fa fa-long-arrow-up"></i>To Top</div>
+ </div>
