--- a/portal/src/app/login/login.component.html
+++ b/portal/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container margin_top">
   <form [formGroup]="loginForm" (ngSubmit)="login()" class="form-signin" novalidate
         [class.was-validated]="loginForm.invalid && (loginForm.dirty || loginForm.touched)">
     <h2 class="form-signin-heading text-center">Please sign in</h2>
