--- a/portal/src/assets/css/custom.css
+++ b/portal/src/assets/css/custom.css
@@ -9,3 +9,11 @@
     color: #2b2b2b;
     text-shadow: 1px 1px 0px #ededed, 4px 4px 0px rgba(0,0,0,0.15);
 }
+
+img.logo-home{
+  margin: 5px 15px 5px 0px;
+}
+
+.margin_top{
+  margin-top: 5em;
+}
