--- a/portal/src/app/register/register.component.html
+++ b/portal/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container margin_top">
   <form [formGroup]="registerForm" (ngSubmit)="register()" class="form-signin" novalidate
         [class.was-validated]="registerForm.invalid && (registerForm.dirty || registerForm.touched)">
     <h2 class="form-signin-heading text-center">Please Register</h2>
