--- a/portal/src/app/register/register.component.html
+++ b/portal/src/app/register/register.component.html
@@ -7,11 +7,11 @@
       <p *ngFor="let error of formErrors">{{ error }}</p>
     </div>
     <div class="form-group">
-      <label for="name" class="sr-only">Name</label>
-      <input type="text" formControlName="name" id="name" class="form-control" [class.is-invalid]="dataInvalid"
-             placeholder="Enter Name" required>
-      <div *ngIf="name.hasError('required')" class="invalid-feedback">
-        Name is required.
+      <label for="username" class="sr-only">Username</label>
+      <input type="text" formControlName="username" id="username" class="form-control" [class.is-invalid]="dataInvalid"
+             placeholder="Enter Username" required>
+      <div *ngIf="username.hasError('required')" class="invalid-feedback">
+        Username is required.
       </div>
     </div>
     <div class="form-group">
