--- a/portal/src/app/includes/footer/footer.component.html
+++ b/portal/src/app/includes/footer/footer.component.html
@@ -56,3 +56,6 @@
     </div>
   </div>
 </footer>
+<div id="scrollTop">
+  <div class="d-flex align-items-center justify-content-end"><i class="fa fa-long-arrow-up"></i>To Top</div>
+</div>
