--- a/portal/src/app/admin/admin.component.html
+++ b/portal/src/app/admin/admin.component.html
@@ -1,24 +1,188 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <div class="container">
-    <a class="navbar-brand berkshire" routerLink="/">Access Portal</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="./" routerLinkActive="active"
-             [routerLinkActiveOptions]="{ exact: true }">Dashboard</a>
+<!-- Custom Font Icons CSS-->
+<link rel="stylesheet" href="/assets/css/admin/font.css">
+<!-- Google fonts - Muli-->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli:300,400,700">
+<!-- theme stylesheet-->
+<link rel="stylesheet" href="/assets/css/admin/style.default.css" id="theme-stylesheet">
+<!-- Custom stylesheet - for your changes-->
+<link rel="stylesheet" href="/assets/css/admin/custom.css">
+
+  <nav class="navbar navbar-expand-lg">
+    <div class="search-panel">
+      <div class="search-inner d-flex align-items-center justify-content-center">
+        <div class="close-btn">Close <i class="fa fa-close"></i></div>
+        <form id="searchForm" action="#">
+          <div class="form-group">
+            <input type="search" name="search" placeholder="What are you searching for...">
+            <button type="submit" class="submit">Search</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="container-fluid d-flex align-items-center justify-content-between">
+      <div class="navbar-header"><a class="navbar-brand" routerLink="/admin">
+          <div class="brand-text brand-big visible text-uppercase"><strong class="text-primary">Access</strong><strong>Portal</strong></div>
+          <div class="brand-text brand-sm"><strong class="text-primary">A</strong><strong>P</strong></div></a>
+        <button class="sidebar-toggle"><i class="fa fa-long-arrow-left"></i></button>
+      </div>
+      <ul class="right-menu list-inline no-margin-bottom">
+        <li class="list-inline-item"><a href="#" class="search-open nav-link"><i class="icon-magnifying-glass-browser"></i></a></li>
+        <li class="list-inline-item dropdown"><a id="navbarDropdownMenuLink1" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link messages-toggle"><i class="icon-email"></i><span class="badge dashbg-1">5</span></a>
+          <ul aria-labelledby="navbarDropdownMenuLink1" class="dropdown-menu messages">
+            <li><a href="#" class="dropdown-item message d-flex align-items-center">
+                <div class="profile"><img src="/assets/img/admin/avatar-3.jpg" alt="..." class="img-fluid">
+                  <div class="status online"></div>
+                </div>
+                <div class="content">   <strong class="d-block">Nadia Halsey</strong><span class="d-block">lorem ipsum dolor sit amit</span><small class="date d-block">9:30am</small></div></a></li>
+            <li><a href="#" class="dropdown-item message d-flex align-items-center">
+                <div class="profile"><img src="/assets/img/admin/avatar-2.jpg" alt="..." class="img-fluid">
+                  <div class="status away"></div>
+                </div>
+                <div class="content">   <strong class="d-block">Peter Ramsy</strong><span class="d-block">lorem ipsum dolor sit amit</span><small class="date d-block">7:40am</small></div></a></li>
+            <li><a href="#" class="dropdown-item message d-flex align-items-center">
+                <div class="profile"><img src="/assets/img/admin/avatar-1.jpg" alt="..." class="img-fluid">
+                  <div class="status busy"></div>
+                </div>
+                <div class="content">   <strong class="d-block">Sam Kaheil</strong><span class="d-block">lorem ipsum dolor sit amit</span><small class="date d-block">6:55am</small></div></a></li>
+            <li><a href="#" class="dropdown-item message d-flex align-items-center">
+                <div class="profile"><img src="/assets/img/admin/avatar-5.jpg" alt="..." class="img-fluid">
+                  <div class="status offline"></div>
+                </div>
+                <div class="content">   <strong class="d-block">Sara Wood</strong><span class="d-block">lorem ipsum dolor sit amit</span><small class="date d-block">10:30pm</small></div></a></li>
+            <li><a href="#" class="dropdown-item text-center message"> <strong>See All Messages <i class="fa fa-angle-right"></i></strong></a></li>
+          </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link logout" (click)="logout()" *ngIf="authService.isLoggedIn">Logout</a>
+        <li class="list-inline-item dropdown"><a id="navbarDropdownMenuLink2" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link tasks-toggle"><i class="icon-new-file"></i><span class="badge dashbg-3">9</span></a>
+          <ul aria-labelledby="navbarDropdownMenuLink2" class="dropdown-menu tasks-list">
+            <li><a href="#" class="dropdown-item">
+                <div class="text d-flex justify-content-between"><strong>Task 1</strong><span>40% complete</span></div>
+                <div class="progress">
+                  <div role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" class="progress-bar dashbg-1"></div>
+                </div></a></li>
+            <li>           <a href="#" class="dropdown-item">
+                <div class="text d-flex justify-content-between"><strong>Task 2</strong><span>20% complete</span></div>
+                <div class="progress">
+                  <div role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" class="progress-bar dashbg-2"></div>
+                </div></a></li>
+            <li>           <a href="#" class="dropdown-item">
+                <div class="text d-flex justify-content-between"><strong>Task 3</strong><span>70% complete</span></div>
+                <div class="progress">
+                  <div role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" class="progress-bar dashbg-4"></div>
+                </div></a></li>
+            <li>           <a href="#" class="dropdown-item">
+                <div class="text d-flex justify-content-between"><strong>Task 4</strong><span>40% complete</span></div>
+                <div class="progress">
+                  <div role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" class="progress-bar dashbg-1"></div>
+                </div></a></li>
+            <li>           <a href="#" class="dropdown-item">
+                <div class="text d-flex justify-content-between"><strong>Task 5</strong><span>30% complete</span></div>
+                <div class="progress">
+                  <div role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" class="progress-bar dashbg-3"></div>
+                </div></a></li>
+            <li>           <a href="#" class="dropdown-item text-center"> <strong>See All Tasks <i class="fa fa-angle-right"></i></strong></a></li>
+          </ul>
         </li>
+        <li class="list-inline-item dropdown menu-large"><a href="#" data-toggle="dropdown" class="nav-link">Mega <i class="fa fa-ellipsis-v"></i></a>
+          <ul class="dropdown-menu megamenu">
+            <div class="row">
+              <div class="col-lg-3"><strong class="text-uppercase">Elements Heading</strong>
+                <ul class="list-unstyled">
+                  <li><a href="#">Lorem ipsum dolor</a></li>
+                  <li><a href="#">Sed ut perspiciatis</a></li>
+                  <li><a href="#">Voluptatum deleniti</a></li>
+                  <li><a href="#">At vero eos</a></li>
+                  <li><a href="#">Consectetur adipiscing</a></li>
+                  <li><a href="#">Duis aute irure</a></li>
+                  <li><a href="#">Necessitatibus saepe</a></li>
+                  <li><a href="#">Maiores alias</a></li>
+                </ul>
+              </div>
+              <div class="col-lg-3"><strong class="text-uppercase">Elements Heading</strong>
+                <ul class="list-unstyled">
+                  <li><a href="#">Lorem ipsum dolor</a></li>
+                  <li><a href="#">Sed ut perspiciatis</a></li>
+                  <li><a href="#">Voluptatum deleniti</a></li>
+                  <li><a href="#">At vero eos</a></li>
+                  <li><a href="#">Consectetur adipiscing</a></li>
+                  <li><a href="#">Duis aute irure</a></li>
+                  <li><a href="#">Necessitatibus saepe</a></li>
+                  <li><a href="#">Maiores alias</a></li>
+                </ul>
+              </div>
+              <div class="col-lg-3"><strong class="text-uppercase">Elements Heading</strong>
+                <ul class="list-unstyled">
+                  <li><a href="#">Lorem ipsum dolor</a></li>
+                  <li><a href="#">Sed ut perspiciatis</a></li>
+                  <li><a href="#">Voluptatum deleniti</a></li>
+                  <li><a href="#">At vero eos</a></li>
+                  <li><a href="#">Consectetur adipiscing</a></li>
+                  <li><a href="#">Duis aute irure</a></li>
+                  <li><a href="#">Necessitatibus saepe</a></li>
+                  <li><a href="#">Maiores alias</a></li>
+                </ul>
+              </div>
+              <div class="col-lg-3"><strong class="text-uppercase">Elements Heading</strong>
+                <ul class="list-unstyled">
+                  <li><a href="#">Lorem ipsum dolor</a></li>
+                  <li><a href="#">Sed ut perspiciatis</a></li>
+                  <li><a href="#">Voluptatum deleniti</a></li>
+                  <li><a href="#">At vero eos</a></li>
+                  <li><a href="#">Consectetur adipiscing</a></li>
+                  <li><a href="#">Duis aute irure</a></li>
+                  <li><a href="#">Necessitatibus saepe</a></li>
+                  <li><a href="#">Maiores alias</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="row megamenu-buttons text-center">
+              <div class="col-lg-2 col-md-4"><a href="#" class="d-block megamenu-button-link dashbg-1"><i class="fa fa-clock-o"></i><strong>Demo 1</strong></a></div>
+              <div class="col-lg-2 col-md-4"><a href="#" class="d-block megamenu-button-link dashbg-2"><i class="fa fa-clock-o"></i><strong>Demo 2</strong></a></div>
+              <div class="col-lg-2 col-md-4"><a href="#" class="d-block megamenu-button-link dashbg-3"><i class="fa fa-clock-o"></i><strong>Demo 3</strong></a></div>
+              <div class="col-lg-2 col-md-4"><a href="#" class="d-block megamenu-button-link dashbg-4"><i class="fa fa-clock-o"></i><strong>Demo 4</strong></a></div>
+              <div class="col-lg-2 col-md-4"><a href="#" class="d-block megamenu-button-link bg-danger"><i class="fa fa-clock-o"></i><strong>Demo 5</strong></a></div>
+              <div class="col-lg-2 col-md-4"><a href="#" class="d-block megamenu-button-link bg-info"><i class="fa fa-clock-o"></i><strong>Demo 6</strong></a></div>
+            </div>
+          </ul>
+        </li>
+        <li class="list-inline-item logout">
+          <a class="nav-link logout" href="Javascript:void(0)" (click)="logout()" *ngIf="authService.isLoggedIn">Logout <i class="icon-logout"></i></a></li>
       </ul>
     </div>
-  </div>
-</nav>
+  </nav>
 
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+  <div class="container-fluid">
+    <div class="d-flex align-items-stretch">
+      <nav id="sidebar">
+        <div class="sidebar-header d-flex align-items-center">
+          <div class="avatar"><img src="/assets/img/admin/avatar-6.jpg" alt="..." class="img-fluid rounded-circle"></div>
+          <div class="title">
+            <h1 class="h5">{{user.username}}</h1>
+            <p>Web Developer</p>
+          </div>
+        </div><span class="heading">Main</span>
+        <ul class="list-unstyled">
+          <li class="active"><a href="index.html"><i class="icon-home"></i>Home</a></li>
+          <li><a href="#dashvariants" aria-expanded="false" data-toggle="collapse"> <i class="icon-windows"></i>Dropdown </a>
+            <ul id="dashvariants" class="collapse list-unstyled">
+              <li><a href="#">Page</a></li>
+              <li><a href="#">Page</a></li>
+              <li><a href="#">Page</a></li>
+              <li><a href="#">Page</a></li>
+            </ul>
+          </li>
+          <li> <a href="tables.html"> <i class="icon-grid"></i>Tables</a></li>
+          <li> <a href="charts.html"> <i class="fa fa-bar-chart"></i>Charts </a></li>
+          <li> <a href="forms.html"> <i class="icon-padnote"></i>Forms </a></li>
+          <li> <a href="login.html"> <i class="icon-logout"></i>Login Page</a></li>
+        </ul><span class="heading">Extras</span>
+        <ul class="list-unstyled">
+          <li> <a href="#"> <i class="icon-settings"></i>Demo </a></li>
+          <li> <a href="#"> <i class="icon-writing-whiteboard"></i>Demo </a></li>
+          <li> <a href="#"> <i class="icon-light-bulb"></i>Demo </a></li>
+          <li> <a href="#"> <i class="icon-chart"></i>Demo </a></li>
+        </ul>
+      </nav>
+    <router-outlet></router-outlet>
+  </div>
+
+  </div>
