--- a/portal/src/app/login/login.component.html
+++ b/portal/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="container margin_top">
   <form [formGroup]="loginForm" (ngSubmit)="login()" class="form-signin" novalidate
         [class.was-validated]="loginForm.invalid && (loginForm.dirty || loginForm.touched)">
