--- a/portal/src/app/page-not-found/page-not-found.component.html
+++ b/portal/src/app/page-not-found/page-not-found.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <div class="jumbotron">
   <h1 class="display-3 text-center text-danger">Whoops! Page not found.</h1>
   <hr>
